--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
   "name": "pocket-civ-client-p",
   "version": "1.0.0",
   "author": "AlphaDio",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "yarn nodemon server.js"
+  },
   "dependencies": {
+    "express": "^4.18.2",
     "phaser": "^3.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
