--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 node_modules/
+dist
+dist-ssr
+*.local
 
 # Ignore all files in the context directory
 context/
