--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6",
+    "axios": "^1.8.1",
     "phaser": "^3.88.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
