Game Jam submission

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Pocket Civ",
-  "name": "Pocket Civilization",
+  "short_name": "Eradotus",
+  "name": "Eradotus",
   "icons": [
     {
       "src": "favicon.ico",
